Failures in console app tests were fixed.